# Agent-Context-Protocol

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTEXT-PACKET.schema.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  acp.draft.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: nuxtjs.yml  pages.yml  validate.yml
EXAMPLES/: context-request.yaml  signed-context-packet.yaml
RFC/: 0001-core-protocol.md  0003-policy-model.md  0004-trust-model.md  0005-federation.md
acp_verifier/: __init__.py  checks.py  examples.py  schemas.py
docs/: ACP-0001-core-protocol.md  ACP-0002-context-packet.md  ACP-0003-context-signing.md  ACP-0004-context-expiry.md  ACP-0005-multi-tenant-isolation.md  ACP-0006-tool-authorization.md  ACP-0007-memory-authorization.md  ACP-0008-audit-trail.md  ACP-0009-context-provenance.md  ACP-0010-context-federation.md  implementation-profiles.md  index.html
examples/: allow-context.yaml  deny-context.yaml  expired-context.yaml  federated-context.yaml
reference/: README.md  verifier-spec.md
schemas/: audit-event.schema.json  context-packet.schema.json  context-request.schema.json
sdk/: README.md
tests/expiry/: README.md
tests/federation/: README.md
tests/memory-scope/: README.md
tests/signing/: README.md
tests/tenant-boundary/: README.md
tests/tool-scope/: README.md
