[project]
name = "acp-verifier"
version = "0.1.0"
description = "Reference verifier for Agent Context Protocol artifacts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22.0",
  "pyyaml>=6.0.0"
]

[project.scripts]
acp = "acp_verifier.cli:main"

[tool.setuptools]
packages = ["acp_verifier"]
